tests/unit/default/syntax-error/141-add-fk-child-to-parent-upd-upd.e.t
---- IN ----
+FK%child.parent-id=>%parent.id*!*>
---- OUT ----
---- ERR ----
syntax: expected EOL after `...ent-id=>%parent.id*!` near `*>` at position 33 - at line 1
---- EXIT ----
1
